# minecraft-data

./: .travis.yml  LICENSE  README.md  minecraft-data.cabal  shell.nix
Minecraft/: Anvil.hs  Block.hs  Chunk.hs  Combinators.hs  Command.hs  Core.hs  GenBlocks.hs  Level.hs  Player.hs  gen-block-namespaced-ids.sh
utils/: DumpAnvil.hs  GenWorld.hs
