cabal-version:       1.16
name:                minecraft-data
version:             0.4.0
synopsis:            a DSL for generating minecraft commands and levels
description:         Minecraft is a very popular sandbox video game. This library is intended for creating, parsing, and modifying world files, and creating .mcfunction files.
homepage:            https://github.com/stepcut/minecraft-data
license:             BSD3
license-file:        LICENSE
author:              jeremy@n-heptane.com
maintainer:          jeremy@n-heptane.com
category:            Game, Minecraft
build-type:          Simple
tested-with:         GHC == 8.6.5, GHC==8.8.1, GHC==8.10.1

source-repository head
    type:     git
    location: https://github.com/stepcut/minecraft-data.git

library
  exposed-modules:     Minecraft.Anvil
                       Minecraft.Block
                       Minecraft.Chunk
                       Minecraft.Combinators
                       Minecraft.Command
                       Minecraft.Core
                       Minecraft.Level
                       Minecraft.Player
  other-extensions:    DeriveDataTypeable, DeriveGeneric, OverloadedStrings
  build-depends:       array,
                       base >=4.8 && <4.15,
                       bimap,
                       bytestring,
                       containers,
                       cereal,
                       directory,
                       filepath,
                       pipes-bytestring,
                       pipes-cereal,
                       pipes-parse,
                       pipes-zlib,
                       pipes,
                       lens,
                       mtl,
                       nbt >= 0.6 && < 0.8,
                       random,
                       text >=1.2 && <1.3,
                       text-show,
                       time,
                       vector,
                       zlib
  default-language:    Haskell2010